--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-TH">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Petch ^____^</title>
+    <title>Petch ^____^ VS Pop Lnw</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia non reprehenderit quidem vitae illum quam, hic ipsam neque itaque eum, quaerat praesentium. Quo iste, magni neque alias fugit nostrum itaque.
+    </p>
+  </body>
 </html>
