--- a/Petch-react/index.html
+++ b/Petch-react/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-TH">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Vi - Rct</title>
   </head>
   <body>
     <div id="root"></div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus architecto veritatis repellat odit! Ullam neque sint voluptas voluptatibus porro odit, repellat magnam repudiandae laborum quas unde eveniet ab doloremque suscipit!</p>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
