--- a/index.html
+++ b/index.html
@@ -6,9 +6,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Petch ^____^ VS Pop Lnw</title>
   </head>
-  <body>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia non reprehenderit quidem vitae illum quam, hic ipsam neque itaque eum, quaerat praesentium. Quo iste, magni neque alias fugit nostrum itaque.
-    </p>
-  </body>
+  <body></body>
 </html>
